--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
+  },
   "dependencies": {
-    "compression": "^1.7.1",
-    "polka": "^0.5.0",
-    "sirv": "^0.4.0"
+    "compression": "1.7.1",
+    "eslint-plugin-svelte3": "1.2.0",
+    "polka": "0.5.0",
+    "sirv": "0.4.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "sapper": "^0.26",
-    "svelte": "^3.0.0",
-    "svelte-loader": "^2.9.0",
-    "webpack": "^4.7.0"
+    "eslint": "5.16.0",
+    "git-cz": "3.0.1",
+    "npm-run-all": "4.1.5",
+    "sapper": "0.26",
+    "svelte": "3.0.0",
+    "svelte-loader": "2.9.0",
+    "webpack": "4.7.0"
   }
 }
